# Test_Cpp_Standards

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
utils/: print.h
with_cpp11/: CMakeLists.txt
with_cpp11/allocator/: notes.rst
with_cpp11/templates/: t_c_array.cpp  t_c_blob.cpp  t_c_what.cpp  t_inline_constexpr.cpp  t_unsigned.cpp
with_cpp14/: CMakeLists.txt  const.cpp  const_entity.cpp  ctor.cpp  iter.cpp  iter_basic.cpp  matplotlib_basic.cpp  matplotlib_normal.cpp  random.cpp  range.cpp  reshape.cpp  scalar.cpp  sort_1d.cpp  sort_2d.cpp  std_accumulate.cpp  std_copy.cpp  std_exclusive_scan.cpp  std_heap_basic.cpp  std_iota.cpp  std_normal_distribution.cpp  std_normal_distribution_deterministic.cpp  std_numeric_limit.cpp  std_partial_sum.cpp  std_random_shuffle.cpp  std_replace.cpp  std_shuffle.cpp  std_thread.cpp  std_thread_ex.cpp  std_transform.cpp  tensor.cpp
with_cpp14/inc/: common.h  utils.h
with_cpp14/stl_algorithms/: std_heap.cpp  std_inplace_merge.cpp  std_nth_element.cpp  std_partial_sort.cpp  std_partition.cpp  std_partition_point.cpp  std_rotate.cpp  std_sort.cpp  std_sort_heap.cpp
with_cpp14/templates/: t_print.cpp  t_unsigned.cpp
with_cpp14/utils/: print.cpp  utils.cpp
with_cpp17/: CMakeLists.txt  async.cpp  std_reduce.cpp
with_cpp20/: CMakeLists.txt
with_cpp20/inc/: common.h  utils.h
with_python/: CMakeLists.txt
with_python/extensions/: setup.py
with_python/extensions/example/: CMakeLists.txt  ptr.cpp
with_python/extensions/pickling/: CMakeLists.txt  main.cpp  p.cpp
with_python/extensions/pickling/inc/: p.h
with_python/extensions/problem/: CMakeLists.txt  problem.cpp
with_python/extensions/problem/inc/: problem.h
with_python/extensions/ref/: CMakeLists.txt  derived.cpp
with_python/extensions/stl/: CMakeLists.txt  random.cpp  random.h  stl_bingdings.cpp
with_python/tests/: process.py  test_normal.py  test_normal_mp.py  test_normal_mt.py
with_python/tests/example/: __init__.py  try_ptr.py
with_python/tests/pickling/: common.py  p.py
with_python/tests/problem/: try_problem.py
with_python/tests/ref/: __init__.py  try_inheritance.py
with_python/tests/stl/: test_normal.py  test_normal_mt.py  test_videocapturing_mt.py
